--- a/package.json
+++ b/package.json
@@ -1,320 +1,116 @@
 {
 
-  
+  "homepage": "http://SundarFullStack.github.io/Sample_Repo",
 
   "name": "client",
 
-  
-
   "version": "0.1.0",
-
-  
 
   "private": true,
 
-  
-
   "main": "index.js",
-
-  
 
   "author": "Sundar",
 
-  
-
   "license": "ISC",
-
-  
 
   "devDependencies": {
 
-  
+    "babel-core": "6.13.*",
 
-    
+    "babel-loader": "6.2.*",
 
-  "babel-core": "6.13.*",
-
-  
-
-    
-
-  "babel-loader": "6.2.*",
-
-  
-
-    
-
-  "webpack": "1.13.*"
-
-  
+    "webpack": "1.13.*"
 
   },
-
-  
 
   "dependencies": {
 
-  
+    "@testing-library/jest-dom": "^5.17.0",
 
-    
+    "@testing-library/react": "^13.4.0",
 
-  "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/user-event": "^13.5.0",
 
-  
+    "axios": "^1.5.0",
 
-    
+    "gh-pages": "^6.0.0",
 
-  "@testing-library/react": "^13.4.0",
+    "react": "^18.2.0",
 
-  
+    "react-dom": "^18.2.0",
 
-    
+    "react-icons": "^4.10.1",
 
-  "@testing-library/user-event": "^13.5.0",
+    "react-reveal": "^1.2.2",
 
-  
+    "react-scripts": "5.0.1",
 
-    
+    "react-scroll": "^1.8.9",
 
-  "axios": "^1.5.0",
+    "react-scroll-to-top": "^3.0.0",
 
-  
+    "react-toastify": "^9.1.3",
 
-    
+    "react-vertical-timeline-component": "^3.6.0",
 
-  "gh-pages": "^6.0.0",
+    "typewriter-effect": "^2.20.1",
 
-  
-
-    
-
-  "react": "^18.2.0",
-
-  
-
-    
-
-  "react-dom": "^18.2.0",
-
-  
-
-    
-
-  "react-icons": "^4.10.1",
-
-  
-
-    
-
-  "react-reveal": "^1.2.2",
-
-  
-
-    
-
-  "react-scripts": "5.0.1",
-
-  
-
-    
-
-  "react-scroll": "^1.8.9",
-
-  
-
-    
-
-  "react-scroll-to-top": "^3.0.0",
-
-  
-
-    
-
-  "react-toastify": "^9.1.3",
-
-  
-
-    
-
-  "react-vertical-timeline-component": "^3.6.0",
-
-  
-
-    
-
-  "typewriter-effect": "^2.20.1",
-
-  
-
-    
-
-  "web-vitals": "^2.1.4"
-
-  
+    "web-vitals": "^2.1.4"
 
   },
-
-  
 
   "scripts": {
 
-  
+    "start": "react-scripts start",
 
-    
+    "predeploy": "npm run build",
 
-  "start": "react-scripts start",
+    "deploy": "gh-pages -d build",
 
-  
+    "build": "react-scripts build",
 
-    
+    "test": "react-scripts test",
 
-  "predeploy": "npm run build",
-
-  
-
-    
-
-  "deploy": "gh-pages -d build",
-
-  
-
-    
-
-  "build": "react-scripts build",
-
-  
-
-    
-
-  "test": "react-scripts test",
-
-  
-
-    
-
-  "eject": "react-scripts eject"
-
-  
+    "eject": "react-scripts eject"
 
   },
-
-  
 
   "eslintConfig": {
 
-  
+    "extends": [
 
-    
+      "react-app",
 
-  "extends": [
+      "react-app/jest"
 
-  
-
-    
-
-    
-
-  "react-app",
-
-  
-
-    
-
-    
-
-  "react-app/jest"
-
-  
-
-    
-
-  ]
-
-  
+    ]
 
   },
-
-  
 
   "browserslist": {
 
-  
+    "production": [
 
-    
+      ">0.2%",
 
-  "production": [
+      "not dead",
 
-  
+      "not op_mini all"
 
-    
+    ],
 
-    
+    "development": [
 
-  ">0.2%",
+      "last 1 chrome version",
 
-  
+      "last 1 firefox version",
 
-    
+      "last 1 safari version"
 
-    
-
-  "not dead",
-
-  
-
-    
-
-    
-
-  "not op_mini all"
-
-  
-
-    
-
-  ],
-
-  
-
-    
-
-  "development": [
-
-  
-
-    
-
-    
-
-  "last 1 chrome version",
-
-  
-
-    
-
-    
-
-  "last 1 firefox version",
-
-  
-
-    
-
-    
-
-  "last 1 safari version"
-
-  
-
-    
-
-  ]
-
-  
+    ]
 
   },
-
-  
 
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app)."
 
