--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-  "homepage": "http://SundarFullStack.github.io/Portfolio_Mern_App",
+  "homepage": "http://SundarFullStack.github.io/Updated_Portfolio",
 
   "name": "client",
 
